# OOP_5sem_Labs_QT

./: AddDialog.cpp  AddDialog.h  AddDialog.ui  CMakeLists.txt  ChangeDialog.cpp  ChangeDialog.h  ChangeDialog.ui  OnlinePlayer.cpp  OnlinePlayer.h  OnlinePlayerDialog.cpp  OnlinePlayerDialog.h  OnlinePlayerDialog.ui  Player.cpp  Player.h  PlayerContainer.cpp  PlayerContainer.h  PlayerDialog.cpp  PlayerDialog.h  PlayerDialog.ui  Player_table.cpp  Player_table.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  utils.h
